[tool.poetry]
name = "time-series-forecasting-server"
version = "0.1.0"
description = "time series forecasting server"
authors = ["Minki Kim <mingi3314@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "time_series_forecasting_server"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
black = "23.12.1"
ruff = "0.1.11"
mypy = "1.8.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
